--- a/introd1.html
+++ b/introd1.html
@@ -39,7 +39,7 @@
 
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="maindis1.html" role="button"
-                            aria-haspopup="true" aria-expanded="false">주 진료과목</a>
+                            aria-haspopup="true" aria-expanded="false">3대 클리닉</a>
                         <ul class="dropdown-menu nav-custom" role="menu">
                             <a class="dropdown-item" href="maindis1.html">여성 갱년기</a>
                             <a class="dropdown-item" href="maindis2.html">신경정신과</a>
@@ -48,7 +48,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="진료.html">진료과목</a>
+                        <a class="nav-link" href="진료.html">주진료과목</a>
                     </li>
                     <li class="nav-item" style="margin-right:100px;">
                         <a class="nav-link" href="main.html#map">진료시간 및 오시는 길</a>
@@ -85,17 +85,23 @@
                 <div class="row no-gutters">
                     <div class="col-8">
                         <div class="row" >
-                            <div class="col-5">
+                            <div class="col-4">
                                 <img src="img\들어오자마자.png.jpg" class="img-fluid" alt="본원 대기실">
                             </div>
-                            <div class="col-5">
-                                <img src="img\들어오자마자.png.jpg" class="img-fluid" alt="본원 대기실">
+                            <div class="col-4">
+                                <img src="img\베드.png.jpg" class="img-fluid" alt="치료기구">
+                            </div>
+                            <div class="col-4">
+                                <img src="img\상장.png.jpg" class="img-fluid" alt="감사패 및 상패">
                             </div>
                         </div>
     
-                        <p>
-                            본원 설명을 쓰시오.
-                        </p>
+                        <a style="color:white; background-color:#0f4c81;">
+                            <br>본원 소개 
+                        </a>
+                        <a>
+                            <br>본원에는 물침대 마사지 기구와 혈압 측정기가 있습니다.
+                        </a>
 
 
                     </div>               
