--- a/disease6.html
+++ b/disease6.html
@@ -39,11 +39,11 @@
 
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="maindis1.html" role="button"
-                            aria-haspopup="true" aria-expanded="false">주 진료과목</a>
+                            aria-haspopup="true" aria-expanded="false">3대 클리닉</a>
                         <ul class="dropdown-menu nav-custom" role="menu">
-                            <a class="dropdown-item" href="maindis1.html">여성 갱년기</a>
-                            <a class="dropdown-item" href="maindis2.html">신경정신과</a>
-                            <a class="dropdown-item" href="maindis3.html">알러지 질환</a>
+                            <a class="dropdown-item" href="maindis1.html">갱년기 클리닉</a>
+                            <a class="dropdown-item" href="maindis2.html">홧병 클리닉</a>
+                            <a class="dropdown-item" href="maindis3.html">비염 클리닉</a>
                         </ul>
                     </li>
 
@@ -51,14 +51,13 @@
                         <a class="nav-link" href="진료.html">진료과목</a>
                     </li>
                     <li class="nav-item" style="margin-right:100px;">
-                        <a class="nav-link" href="main.html#map">진료시간 및 오시는 길</a>
+                        <a class="nav-link" href="index.html#map">진료시간 및 오시는 길</a>
                     </li>
                 </ul>
 
             </div>
         </nav>
     </header>
-
 
 
 
@@ -72,28 +71,26 @@
                 <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
 
                     <div id="dias-brand">
-                        <a class="nav-link 진료과목 bd">진료과목</a>
+                        <a class="nav-link 진료과목 bd">주진료과목</a>
 
 
                     </div>
 
                     
-                    <a class="nav-link" href="disease1.html">갱년기</a>
-                    <a class="nav-link" href="disease2.html">신경정신과</a>
-                    <a class="nav-link" href="disease3.html">알러지</a>
-                    <a class="nav-link" href="disease4.html">비만</a>
-                    <a class="nav-link" href="disease5.html">비염</a>
-                    <a class="nav-link act" href="disease6.html">성장</a>
-                    <a class="nav-link" href="disease7.html">관절</a>
-                    <a class="nav-link" href="disease8.html">소화</a>
+                    <a class="nav-link" href="disease1.html">갱년기 클리닉</a>
+                    <a class="nav-link" href="disease2.html">홧병 클리닉</a>
+                    <a class="nav-link" href="disease3.html">비염 클리닉</a>
+                    <a class="nav-link" href="disease4.html">과민성 장 증후군</a>
+                    <a class="nav-link" href="disease5.html">통증 클리닉</a>
+                    <a class="nav-link act" href="disease6.html">피부 클리닉</a>
 
                 </div>
             </div>
-            <div class="col-10">
+            <div class="offset-1 col-8">
                 <div class="row no-gutters" style="padding:20px;">
 
-                    <p>성장 저하란?</p>
-                    <p>키가 또래에 비해 작다.</p>
+                    <p>피부 클리닉</p>
+                    <p>가렵다.</p>
                 </div>
             </div>
         </div>
@@ -101,6 +98,7 @@
     </div>
 
 
+    <script type="text/javascript" src="leftnav.js"></script>
 
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
