--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html lang="ko">
 
 <head>
+    
+    
+    <meta name="naver-site-verification" content="df51fdb1d58c0f89d5f7f92e49a6f0b75abe0b3d" />
+
     <link href="https://fonts.googleapis.com/css2?family=East+Sea+Dokdo&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Nanum+Myeongjo:wght@400;800&display=swap" rel="stylesheet">
 
